--- a/data/properties/catchy.properties
+++ b/data/properties/catchy.properties
@@ -1,8 +1,11 @@
+# gameplay
+num_players=3
+
 # KacheOut specific
-kinect_min_mm=1800
-kinect_max_mm=2800
+kinect_min_mm=1000
+kinect_max_mm=2000
 kinect_top_pixel=0
-kinect_bottom_pixel=150
+kinect_bottom_pixel=480
 starts_on_game=false
 #sponsor_images=images/sponsors/oh-heck-yeah-logo.png
 #,images/kacheout/dsw/crave.png
@@ -11,14 +14,14 @@ starts_on_game=false
 ### 1100x462 - native kacheout size, uncompensated..
 ### 1280x538 - kacheout for 720p translation
 ### 1024x768 - kacheout for non-HD resolution
-width=1024
+width=1300
 height=768
 fills_screen=false
-fullscreen=true
+fullscreen=false
 show_stats=false
 
 # Kinect ----------------
-kinect_active=false
+kinect_active=true
 kinect_mirrored=true
 kinect_depth=true
 kinect_rgb=true
