Add more scene graphics for Catchy

--- a/data/properties/catchy.properties
+++ b/data/properties/catchy.properties
@@ -1,5 +1,6 @@
 # gameplay
 num_players=3
+rendering=false
 
 # KacheOut specific
 kinect_min_mm=1000
@@ -21,7 +22,7 @@ fullscreen=false
 show_stats=false
 
 # Kinect ----------------
-kinect_active=true
+kinect_active=false
 kinect_mirrored=true
 kinect_depth=true
 kinect_rgb=true
