Add time-based fps factoring

--- a/data/properties/catchy.properties
+++ b/data/properties/catchy.properties
@@ -1,6 +1,7 @@
 # gameplay
-num_players=3
+num_players=2
 rendering=false
+fps=60
 
 # KacheOut specific
 kinect_min_mm=1000
@@ -9,14 +10,13 @@ kinect_top_pixel=0
 kinect_bottom_pixel=480
 starts_on_game=false
 #sponsor_images=images/sponsors/oh-heck-yeah-logo.png
-#,images/kacheout/dsw/crave.png
 
 # Screen Dimensions ----------------
 ### 1100x462 - native kacheout size, uncompensated..
 ### 1280x538 - kacheout for 720p translation
 ### 1024x768 - kacheout for non-HD resolution
-width=1300
-height=768
+width=1100
+height=462
 fills_screen=false
 fullscreen=false
 show_stats=false
