Add UDP-based remote control

--- a/data/properties/catchy.properties
+++ b/data/properties/catchy.properties
@@ -1,33 +1,39 @@
 # gameplay
 num_players=2
-game_seconds=55
+game_seconds=30
 rendering=false
 fps=30
-
-# KacheOut specific
-kinect_min_mm=1000
-kinect_max_mm=2000
-kinect_top_pixel=0
-kinect_bottom_pixel=480
-starts_on_game=false
-#sponsor_images=images/sponsors/oh-heck-yeah-logo.png
+starts_on_game=true
+#sponsor_images=images/sponsors/crave.png
 
 # Screen Dimensions ----------------
-### 1100x462 - native kacheout size, uncompensated..
-### 1280x538 - kacheout for 720p translation
-### 1024x768 - kacheout for non-HD resolution
-width=1100
-height=462
+#width=1100
+#height=462
+width=1620
+height=680
 fills_screen=false
 fullscreen=false
 show_stats=false
 
 # Kinect ----------------
+kinect_min_mm=1200
+kinect_max_mm=1800
+kinect_top_pixel=0
+kinect_bottom_pixel=480
+
 kinect_active=false
 kinect_mirrored=true
 kinect_depth=true
 kinect_rgb=true
 kinect_depth_image=true
+
+# Kinect remote ----------------
+kinect_remote_active=false
+kinect_remote_debug=false
+kinect_remote_sender_ip=10.0.2.94
+kinect_remote_sender_port=6000
+kinect_remote_receiver_ip=10.0.2.47
+kinect_remote_receiver_port=6100
 
 # Leap ----------------
 leap_active=false
