--- a/.classpath
+++ b/.classpath
@@ -44,6 +44,7 @@
 	<classpathentry kind="lib" path="lib/joons/library/sunflow73.jar"/>
 	<classpathentry kind="lib" path="lib/Filters/dist/Filters.jar"/>
 	<classpathentry kind="lib" path="lib/haxademic/haxademic.jar"/>
+	<classpathentry kind="lib" path="lib/udp/library/udp.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
