Default to Kinect control

--- a/data/properties/catchy.properties
+++ b/data/properties/catchy.properties
@@ -21,7 +21,7 @@ kinect_max_mm=1800
 kinect_top_pixel=0
 kinect_bottom_pixel=480
 
-kinect_active=false
+kinect_active=true
 kinect_mirrored=true
 kinect_depth=true
 kinect_rgb=true
