Fix terrible resetMatrix() calls from DrawUtil

--- a/data/properties/kacheout.properties
+++ b/data/properties/kacheout.properties
@@ -13,8 +13,8 @@ sponsor_images=images/sponsors/oh-heck-yeah-logo.png
 ### 1024x768 - kacheout for non-HD resolution
 width=1024
 height=768
-fills_screen=true
-fullscreen=true
+fills_screen=false
+fullscreen=false
 show_stats=false
 
 # Kinect ----------------
