Refactor games & support apps to use base classes
* Build Kinect config applets for each game
* Create Tinkerbot remote control app
* All apps now extend OHYKinectApp

--- a/data/properties/bluebear.properties
+++ b/data/properties/bluebear.properties
@@ -16,10 +16,11 @@ fullscreen=false
 show_stats=false
 
 # Kinect ----------------
-kinect_min_mm=1000
-kinect_max_mm=2000
+kinect_min_mm=1200
+kinect_max_mm=1700
 kinect_top_pixel=0
 kinect_bottom_pixel=480
+kinect_player_gap=150
 
 kinect_active=false
 kinect_mirrored=true
