--- a/data/properties/tinkerbot.properties
+++ b/data/properties/tinkerbot.properties
@@ -1,6 +1,6 @@
 # gameplay
 num_players=4
-game_seconds=30
+game_seconds=60
 rendering=false
 fps=30
 starts_on_game=false
@@ -20,6 +20,7 @@ kinect_min_mm=1000
 kinect_max_mm=1500
 kinect_top_pixel=0
 kinect_bottom_pixel=480
+kinect_player_gap=150
 
 kinect_active=true
 kinect_mirrored=true
