--- a/.classpath
+++ b/.classpath
@@ -37,6 +37,7 @@
 	<classpathentry kind="lib" path="lib/controlP5/library/controlP5.jar"/>
 	<classpathentry kind="lib" path="lib/haxademic/haxademic.jar"/>
 	<classpathentry kind="lib" path="lib/udp/library/udp.jar"/>
+	<classpathentry kind="lib" path="lib/oscP5/library/oscP5.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
