Tinker Bot goes fullscreen

--- a/data/properties/tinkerbot.properties
+++ b/data/properties/tinkerbot.properties
@@ -2,7 +2,7 @@
 num_players=4
 game_seconds=60
 rendering=false
-fps=60
+fps=40
 starts_on_game=false
 #sponsor_images=images/sponsors/crave.png
 
@@ -11,8 +11,8 @@ starts_on_game=false
 #height=462
 width=1020
 height=630
-fills_screen=false
-fullscreen=false
+fills_screen=true
+fullscreen=true
 show_stats=false
 
 # Kinect ----------------
