Clean up .properties files

--- a/data/properties/bluebear.properties
+++ b/data/properties/bluebear.properties
@@ -2,17 +2,17 @@
 num_players=2
 game_seconds=30
 rendering=false
-fps=30
+fps=40
 starts_on_game=false
 #sponsor_images=images/sponsors/crave.png
 
 # Screen Dimensions ----------------
 #width=1100
 #height=462
-width=1120
-height=680
-fills_screen=false
-fullscreen=false
+width=1020
+height=630
+fills_screen=true
+fullscreen=true
 show_stats=false
 
 # Kinect ----------------
@@ -22,7 +22,7 @@ kinect_top_pixel=0
 kinect_bottom_pixel=480
 kinect_player_gap=150
 
-kinect_active=false
+kinect_active=true
 kinect_mirrored=true
 kinect_depth=true
 kinect_rgb=true
@@ -41,4 +41,3 @@ leap_active=false
 
 #rendering=false
 hide_cursor=true
-menu_bar_tint=true
