--- a/data/properties/catchy.properties
+++ b/data/properties/catchy.properties
@@ -11,8 +11,8 @@ starts_on_game=true
 #height=462
 width=1620
 height=680
-fills_screen=false
-fullscreen=false
+fills_screen=true
+fullscreen=true
 show_stats=false
 
 # Kinect ----------------
@@ -41,4 +41,3 @@ leap_active=false
 
 #rendering=false
 hide_cursor=true
-menu_bar_tint=true
