--- a/data/properties/tinkerbot.properties
+++ b/data/properties/tinkerbot.properties
@@ -16,8 +16,8 @@ fullscreen=true
 show_stats=false
 
 # Kinect ----------------
-kinect_min_mm=1000
-kinect_max_mm=1500
+kinect_min_mm=1200
+kinect_max_mm=1700
 kinect_top_pixel=0
 kinect_bottom_pixel=480
 kinect_player_gap=150
@@ -40,5 +40,4 @@ kinect_remote_receiver_port=6100
 leap_active=false
 
 #rendering=false
-hide_cursor=false
-menu_bar_tint=true
+hide_cursor=true
