Make neighborhood time length configurable

--- a/data/properties/bluebear.properties
+++ b/data/properties/bluebear.properties
@@ -1,8 +1,9 @@
 # gameplay
 num_players=2
-game_seconds=30
+neighborhood_seconds=4
 rendering=false
 fps=40
+hide_cursor=true
 starts_on_game=false
 #sponsor_images=images/sponsors/crave.png
 
@@ -39,5 +40,3 @@ kinect_remote_receiver_port=6100
 # Leap ----------------
 leap_active=false
 
-#rendering=false
-hide_cursor=true
