--- a/data/properties/bluebear.properties
+++ b/data/properties/bluebear.properties
@@ -5,7 +5,8 @@ rendering=false
 fps=40
 hide_cursor=true
 starts_on_game=false
-#sponsor_images=images/sponsors/crave.png
+partners_image=images/ohy-partners.png
+sponsors_image=images/ohy-sponsors.png
 
 # Screen Dimensions ----------------
 #width=1100
