WIP: flexible, shared intro screen sequence
* Convert TinkerBot intro screen to same system as BlueBear
* Next: convert Catchy and add more screens into the mix

--- a/data/properties/tinkerbot.properties
+++ b/data/properties/tinkerbot.properties
@@ -4,7 +4,8 @@ game_seconds=60
 rendering=false
 fps=40
 starts_on_game=false
-#sponsor_images=images/sponsors/crave.png
+partners_image=images/ohy-partners.png
+sponsors_image=images/ohy-sponsors.png
 
 # Screen Dimensions ----------------
 #width=1100
