--- a/data/properties/bluebear.properties
+++ b/data/properties/bluebear.properties
@@ -5,8 +5,10 @@ rendering=false
 fps=40
 hide_cursor=true
 starts_on_game=false
+intro_screens_time=4
 partners_image=images/ohy-partners.png
-sponsors_image=images/ohy-sponsors.png
+sponsors_image=images/sponsors/crave-large.png
+has_onereach=true
 
 # Screen Dimensions ----------------
 #width=1100
