--- a/data/properties/tinkerbot.properties
+++ b/data/properties/tinkerbot.properties
@@ -4,8 +4,10 @@ game_seconds=60
 rendering=false
 fps=40
 starts_on_game=false
+intro_screens_time=4
 partners_image=images/ohy-partners.png
-sponsors_image=images/ohy-sponsors.png
+sponsors_image=images/sponsors/crave-large.png
+has_onereach=true
 
 # Screen Dimensions ----------------
 #width=1100
