Update properties and partner/sponsor images

--- a/data/properties/catchy.properties
+++ b/data/properties/catchy.properties
@@ -1,19 +1,20 @@
-# gameplay
+# Gameplay ----------------
 num_players=2
 game_seconds=30
-rendering=false
-fps=30
-starts_on_game=true
-#sponsor_images=images/sponsors/crave.png
+fps=35
+starts_on_game=false
+intro_screens_time=5
+partners_image=images/ohy-partners-slim.png
+sponsors_image=images/sponsors/ohy-2014-sponsors-wide.png
+has_onereach=true
 
 # Screen Dimensions ----------------
-#width=1100
-#height=462
-width=1620
-height=680
-fills_screen=true
-fullscreen=true
-show_stats=false
+width=576
+height=216
+#width=1728
+#height=648
+fills_screen=false
+fullscreen=false
 
 # Kinect ----------------
 kinect_min_mm=1000
@@ -21,6 +22,7 @@ kinect_max_mm=1600
 kinect_top_pixel=0
 kinect_bottom_pixel=480
 kinect_player_gap=250
+kinect_pixel_skip=14
 
 kinect_active=true
 kinect_mirrored=true
@@ -39,5 +41,7 @@ kinect_remote_receiver_port=6100
 # Leap ----------------
 leap_active=false
 
-#rendering=false
-hide_cursor=true
+# Haxademic props ----------------
+rendering=false
+hide_cursor=false
+show_stats=false
