--- a/data/properties/tinkerbot.properties
+++ b/data/properties/tinkerbot.properties
@@ -1,46 +1,45 @@
-# gameplay
+# Gameplay ----------------
 num_players=4
 game_seconds=60
-rendering=false
-fps=40
+fps=45
 starts_on_game=false
-intro_screens_time=4
-partners_image=images/ohy-partners.png
-sponsors_image=images/sponsors/crave-large.png
+intro_screens_time=5
+partners_image=images/ohy-partners-large.png
+sponsors_image=images/sponsors/ohy-2014-sponsors-large.png
 has_onereach=true
 
 # Screen Dimensions ----------------
-#width=1100
-#height=462
-width=1020
-height=630
-fills_screen=true
-fullscreen=true
-show_stats=false
+width=1280
+height=720
+fills_screen=false
+fullscreen=false
 
 # Kinect ----------------
 kinect_min_mm=1200
-kinect_max_mm=1700
+kinect_max_mm=2000
 kinect_top_pixel=0
 kinect_bottom_pixel=480
 kinect_player_gap=150
+kinect_pixel_skip=14
 
-kinect_active=true
+kinect_active=false
 kinect_mirrored=true
 kinect_depth=true
 kinect_rgb=true
 kinect_depth_image=true
 
 # Kinect remote ----------------
-kinect_remote_active=false
-kinect_remote_debug=false
-kinect_remote_sender_ip=10.0.2.94
+kinect_remote_active=true
+kinect_remote_debug=true
+kinect_remote_sender_ip=10.0.1.153
 kinect_remote_sender_port=6000
-kinect_remote_receiver_ip=10.0.2.47
+kinect_remote_receiver_ip=10.0.1.23
 kinect_remote_receiver_port=6100
 
 # Leap ----------------
 leap_active=false
 
-#rendering=false
+# Haxademic props ----------------
+rendering=false
 hide_cursor=true
+show_stats=false
