--- a/data/properties/bluebear.properties
+++ b/data/properties/bluebear.properties
@@ -1,30 +1,26 @@
-# gameplay
+# Gameplay ----------------
 num_players=2
 neighborhood_seconds=12
-rendering=false
 fps=40
-hide_cursor=true
 starts_on_game=false
-intro_screens_time=4
+intro_screens_time=5
 partners_image=images/ohy-partners.png
-sponsors_image=images/sponsors/crave-large.png
+sponsors_image=images/sponsors/ohy-2014-sponsors-wide.png
 has_onereach=true
 
 # Screen Dimensions ----------------
-#width=1100
-#height=462
-width=1020
-height=630
-fills_screen=true
-fullscreen=true
-show_stats=false
+width=1100
+height=462
+fills_screen=false
+fullscreen=false
 
 # Kinect ----------------
 kinect_min_mm=1200
-kinect_max_mm=1700
+kinect_max_mm=2400
 kinect_top_pixel=0
 kinect_bottom_pixel=480
 kinect_player_gap=150
+kinect_pixel_skip=14
 
 kinect_active=true
 kinect_mirrored=true
@@ -43,3 +39,7 @@ kinect_remote_receiver_port=6100
 # Leap ----------------
 leap_active=false
 
+# Haxademic props ----------------
+rendering=false
+hide_cursor=true
+show_stats=false
