Add draggable keystone configuration flag

--- a/data/properties/catchy.properties
+++ b/data/properties/catchy.properties
@@ -5,16 +5,17 @@ fps=35
 starts_on_game=false
 intro_screens_time=5
 partners_image=images/ohy-partners-slim.png
-sponsors_image=images/sponsors/ohy-2014-sponsors-wide.png
-has_onereach=true
+#sponsors_image=images/sponsors/ohy-2014-sponsors-wide.png
+#has_onereach=true
 
 # Screen Dimensions ----------------
 width=576
 height=216
 #width=1728
 #height=648
-fills_screen=false
-fullscreen=false
+fills_screen=true
+fullscreen=true
+keystones=false
 
 # Kinect ----------------
 kinect_min_mm=1500
