--- a/data/properties/tinkerbot.properties
+++ b/data/properties/tinkerbot.properties
@@ -6,13 +6,14 @@ starts_on_game=false
 intro_screens_time=5
 partners_image=images/ohy-partners-large.png
 sponsors_image=images/sponsors/ohy-2014-sponsors-large.png
-has_onereach=true
+#has_onereach=true
 
 # Screen Dimensions ----------------
 width=1280
 height=720
 fills_screen=false
 fullscreen=false
+keystones=false
 
 # Kinect ----------------
 kinect_min_mm=1200
