Modernize KacheOut .properties and main() launch

--- a/data/properties/kacheout.properties
+++ b/data/properties/kacheout.properties
@@ -1,32 +1,42 @@
-# KacheOut specific
+# Gameplay ----------------
+starts_on_game=false
+sponsor_images=images/sponsors/oh-heck-yeah-logo.png
+
+# Screen Dimensions ----------------
+width=1280
+height=720
+width=1920
+height=1080
+fills_screen=true
+fullscreen=false
+#keystones=false # needs implementation
+
+# Kinect ----------------
 kinect_min_mm=1800
 kinect_max_mm=2800
 kinect_top_pixel=0
 kinect_bottom_pixel=150
-starts_on_game=false
-sponsor_images=images/sponsors/oh-heck-yeah-logo.png
-#,images/kacheout/dsw/crave.png
+#kinect_player_gap=250 # needs implementation
+#kinect_pixel_skip=14 # needs implementation
 
-# Screen Dimensions ----------------
-### 1100x462 - native kacheout size, uncompensated..
-### 1280x538 - kacheout for 720p translation
-### 1024x768 - kacheout for non-HD resolution
-width=1024
-height=768
-fills_screen=false
-fullscreen=false
-show_stats=false
-
-# Kinect ----------------
 kinect_active=true
 kinect_mirrored=true
 kinect_depth=true
 kinect_rgb=true
 kinect_depth_image=true
 
+# Kinect remote ----------------
+#kinect_remote_active=false # needs implementation
+#kinect_remote_debug=false # needs implementation
+#kinect_remote_sender_ip=10.0.1.23 # needs implementation
+#kinect_remote_sender_port=6000 # needs implementation
+#kinect_remote_receiver_ip=10.0.1.23 # needs implementation
+#kinect_remote_receiver_port=6100 # needs implementation
+
 # Leap ----------------
 leap_active=false
 
-#rendering=false
-hide_cursor=true
-menu_bar_tint=true
+## Haxademic props ----------------
+rendering=false
+hide_cursor=false
+show_stats=false
