Add Kinect config and dynamicize player gap

--- a/data/properties/kacheout.properties
+++ b/data/properties/kacheout.properties
@@ -16,7 +16,7 @@ kinect_min_mm=1800
 kinect_max_mm=2800
 kinect_top_pixel=0
 kinect_bottom_pixel=150
-#kinect_player_gap=250 # needs implementation
+kinect_player_gap=300
 #kinect_pixel_skip=14 # needs implementation
 
 kinect_active=true
