--- a/data/properties/kacheout.properties
+++ b/data/properties/kacheout.properties
@@ -1,5 +1,5 @@
 # Gameplay ----------------
-starts_on_game=false
+starts_on_game=true
 sponsor_images=images/sponsors/oh-heck-yeah-logo.png
 
 # Screen Dimensions ----------------
@@ -16,7 +16,7 @@ kinect_min_mm=1800
 kinect_max_mm=2800
 kinect_top_pixel=0
 kinect_bottom_pixel=150
-kinect_player_gap=300
+kinect_player_gap=200
 #kinect_pixel_skip=14 # needs implementation
 
 kinect_active=true
