--- a/.classpath
+++ b/.classpath
@@ -21,12 +21,6 @@
 	<classpathentry kind="lib" path="lib/processing-2/libraries/video/library/gstreamer-java.jar"/>
 	<classpathentry kind="lib" path="lib/processing-2/libraries/video/library/jna.jar"/>
 	<classpathentry kind="lib" path="lib/processing-2/libraries/net/library/net.jar"/>
-	<classpathentry kind="lib" path="lib/leap-motion-processing/library/LeapJava.jar"/>
-	<classpathentry kind="lib" path="lib/leap-motion-processing/library/LeapMotionForProcessing.jar">
-		<attributes>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="ohheckyeah-games-java/lib/leap-motion-processing/library/macosx"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="lib" path="lib/UMovieMaker/library/monte-cc.jar"/>
 	<classpathentry kind="lib" path="lib/UMovieMaker/library/UMovieMaker.jar"/>
 	<classpathentry kind="lib" path="lib/controlP5/library/controlP5.jar"/>
@@ -36,6 +30,16 @@
 	<classpathentry kind="lib" path="lib/geomerative/library/batikfont.jar"/>
 	<classpathentry kind="lib" path="lib/geomerative/library/geomerative.jar"/>
 	<classpathentry kind="lib" path="lib/OBJLoader/library/OBJLoader.jar"/>
+	<classpathentry kind="lib" path="lib/LeapMotionForProcessing/library/LeapJava.jar">
+		<attributes>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="/Users/cacheflowe/Documents/workspace/ohheckyeah/ohheckyeah-games-java/lib/LeapMotionForProcessing/library/macosx"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="lib/LeapMotionForProcessing/library/LeapMotionForProcessing.jar" sourcepath="lib/LeapMotionForProcessing/src">
+		<attributes>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="/Users/cacheflowe/Documents/workspace/ohheckyeah/ohheckyeah-games-java/lib/LeapMotionForProcessing/library/macosx"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
