Simplify remote control & abstract controls more

--- a/data/properties/bluebear.properties
+++ b/data/properties/bluebear.properties
@@ -5,14 +5,17 @@ fps=40
 starts_on_game=false
 intro_screens_time=5
 partners_image=images/ohy-partners.png
-sponsors_image=images/sponsors/ohy-2014-sponsors-wide.png
-has_onereach=true
+#sponsors_image=images/sponsors/ohy-2014-sponsors-wide.png
+has_onereach=false
 
 # Screen Dimensions ----------------
 width=1100
 height=462
-fills_screen=false
-fullscreen=false
+width=576
+height=216
+fills_screen=true
+fullscreen=true
+keystones=true
 
 # Kinect ----------------
 kinect_min_mm=1200
@@ -22,7 +25,7 @@ kinect_bottom_pixel=480
 kinect_player_gap=150
 kinect_pixel_skip=14
 
-kinect_active=true
+kinect_active=false
 kinect_mirrored=true
 kinect_depth=true
 kinect_rgb=true
