--- a/data/properties/catchy.properties
+++ b/data/properties/catchy.properties
@@ -4,7 +4,7 @@ game_seconds=30
 fps=35
 starts_on_game=false
 intro_screens_time=5
-partners_image=images/ohy-partners-slim.png
+partners_image=images/ohy-partners.png
 #sponsors_image=images/sponsors/ohy-2014-sponsors-wide.png
 #has_onereach=true
 
@@ -15,24 +15,24 @@ height=216
 #height=648
 fills_screen=true
 fullscreen=true
-keystones=false
+keystones=true
 
 # Kinect ----------------
-kinect_min_mm=1500
-kinect_max_mm=2500
+kinect_min_mm=800
+kinect_max_mm=1700
 kinect_top_pixel=0
 kinect_bottom_pixel=480
 kinect_player_gap=250
 kinect_pixel_skip=14
 
-kinect_active=true
+kinect_active=false
 kinect_mirrored=true
 kinect_depth=true
 kinect_rgb=true
 kinect_depth_image=true
 
 # Kinect remote ----------------
-kinect_remote_active=true
+kinect_remote_active=false
 kinect_remote_debug=false
 kinect_remote_sender_ip=10.0.1.23
 kinect_remote_sender_port=6000
@@ -40,7 +40,7 @@ kinect_remote_receiver_ip=10.0.1.23
 kinect_remote_receiver_port=6100
 
 # Leap ----------------
-leap_active=false
+leap_active=true
 
 # Haxademic props ----------------
 rendering=false
