--- a/data/properties/kacheout.properties
+++ b/data/properties/kacheout.properties
@@ -1,6 +1,6 @@
 # Gameplay ----------------
 starts_on_game=true
-sponsor_images=images/sponsors/oh-heck-yeah-logo.png
+sponsor_images=images/ohy-partners-geekend.png
 
 # Screen Dimensions ----------------
 width=1280
@@ -8,18 +8,18 @@ height=720
 width=1920
 height=1080
 fills_screen=true
-fullscreen=false
+fullscreen=true
 #keystones=false # needs implementation
 
 # Kinect ----------------
-kinect_min_mm=1800
-kinect_max_mm=2800
+kinect_min_mm=800
+kinect_max_mm=1800
 kinect_top_pixel=0
-kinect_bottom_pixel=150
+kinect_bottom_pixel=4800
 kinect_player_gap=200
 #kinect_pixel_skip=14 # needs implementation
 
-kinect_active=true
+kinect_active=false
 kinect_mirrored=true
 kinect_depth=true
 kinect_rgb=true
@@ -34,7 +34,7 @@ kinect_depth_image=true
 #kinect_remote_receiver_port=6100 # needs implementation
 
 # Leap ----------------
-leap_active=false
+leap_active=true
 
 ## Haxademic props ----------------
 rendering=false
