--- a/data/properties/tinkerbot.properties
+++ b/data/properties/tinkerbot.properties
@@ -4,24 +4,24 @@ game_seconds=60
 fps=45
 starts_on_game=false
 intro_screens_time=5
-partners_image=images/ohy-partners-large.png
-sponsors_image=images/sponsors/ohy-2014-sponsors-large.png
+partners_image=images/ohy-partners.png
+#sponsors_image=images/sponsors/ohy-2014-sponsors-large-dmns.png
 #has_onereach=true
 
 # Screen Dimensions ----------------
 width=1280
 height=720
-fills_screen=false
-fullscreen=false
-keystones=false
+fills_screen=true
+fullscreen=true
+keystones=true
 
 # Kinect ----------------
-kinect_min_mm=1200
-kinect_max_mm=2000
+kinect_min_mm=1500
+kinect_max_mm=2100
 kinect_top_pixel=0
 kinect_bottom_pixel=480
 kinect_player_gap=150
-kinect_pixel_skip=14
+kinect_pixel_skip=10
 
 kinect_active=false
 kinect_mirrored=true
@@ -30,9 +30,9 @@ kinect_rgb=true
 kinect_depth_image=true
 
 # Kinect remote ----------------
-kinect_remote_active=true
+kinect_remote_active=false
 kinect_remote_debug=true
-kinect_remote_sender_ip=10.0.1.153
+kinect_remote_sender_ip=10.0.1.23
 kinect_remote_sender_port=6000
 kinect_remote_receiver_ip=10.0.1.23
 kinect_remote_receiver_port=6100
