Kirk OHY updates for Kinect V2, create adaptive drop speed for catchy

--- a/data/properties/bluebear.properties
+++ b/data/properties/bluebear.properties
@@ -1,4 +1,5 @@
 # Gameplay ----------------
+# Must have minimum of 2 players or it will crash
 num_players=2
 neighborhood_seconds=12
 fps=40
@@ -21,7 +22,7 @@ keystones=true
 kinect_min_mm=1200
 kinect_max_mm=2400
 kinect_top_pixel=0
-kinect_bottom_pixel=480
+kinect_bottom_pixel=424
 kinect_player_gap=150
 kinect_pixel_skip=14
 
