--- a/data/properties/catchy.properties
+++ b/data/properties/catchy.properties
@@ -2,6 +2,16 @@
 num_players=2
 game_seconds=30
 fps=35
+
+#speed of things dropped. The value is a factor that is multipled with fps. 
+# You just have to play with it to get the speed you want. Default = 4
+droppables_speed=2
+
+#Determine if the speed of droppables is adaptive base on player success in the game. 
+#TODO: Need a way to detect identify of player to get abilities profile.
+droppables_speed_adaptive=true
+
+
 starts_on_game=false
 intro_screens_time=5
 partners_image=images/ohy-partners.png
@@ -9,8 +19,9 @@ partners_image=images/ohy-partners.png
 #has_onereach=true
 
 # Screen Dimensions ----------------
-width=576
-height=216
+##screen dimension ratio 2.667 width / height
+#width=576
+#height=216
 #width=1728
 #height=648
 fills_screen=true
@@ -21,9 +32,8 @@ keystones=true
 kinect_min_mm=800
 kinect_max_mm=1700
 kinect_top_pixel=0
-kinect_bottom_pixel=480
-kinect_player_gap=250
-kinect_pixel_skip=14
+kinect_bottom_pixel=424
+kinect_player_gap=150
 
 kinect_active=false
 kinect_mirrored=true
