--- a/data/properties/kacheout.properties
+++ b/data/properties/kacheout.properties
@@ -15,8 +15,8 @@ fullscreen=true
 kinect_min_mm=800
 kinect_max_mm=1800
 kinect_top_pixel=0
-kinect_bottom_pixel=4800
-kinect_player_gap=200
+kinect_bottom_pixel=424
+kinect_player_gap=150
 #kinect_pixel_skip=14 # needs implementation
 
 kinect_active=false
