Post-Motus merge cleanup & Kinect V2

--- a/data/properties/kacheout.properties
+++ b/data/properties/kacheout.properties
@@ -19,7 +19,7 @@ kinect_bottom_pixel=424
 kinect_player_gap=150
 #kinect_pixel_skip=14 # needs implementation
 
-kinect_active=false
+kinect_active=true
 kinect_mirrored=true
 kinect_depth=true
 kinect_rgb=true
